[레거시 코드 리팩터링 - 2단계] 그레이(김동욱) 미션 제출합니다.  (#590)
* build: ddl-auto validate 옵션 추가

* feat: 값 객체 추가

* refactor: Product JPA 엔티티로 변경

* refactor: MenuGroup JPA 엔티티로 변경

* refactor: MenuProduct JPA 엔티티로 변경

* refactor: Menu JPA 엔티티로 변경

* refactor: 사용하지 않는 JdbcTemplateDao 삭제

* refactor: 사용하지 않는 필드 제거 및 컬럼 명 변경

* refactor: TableGroup, MenuGroup, Order 관련 엔티티 JPA 엔티티로 변경

* refactor: Repository 추가

* refactor: DAO 객체 제거

* refactor: DAO -> Repository로 변경

* refactor: 상품 서비스 리팩터링

* refactor: 메뉴 그룹 서비스 리팩터링

* refactor: 메뉴 서비스 리팩터링

* feat: 가격이 큰지 확인하는 메서드 추가

* chore: 사용하지 않는 필드 삭제

* chore: read-only=true 명시

* refactor: 주문 서비스 리팩터링

* refactor: 테이블 그룹 서비스 리팩터링

* refactor: 주문 테이블 서비스 리팩터링

* refactor: 실패하는 테스트 수정

* style: final 키워드 제거 및 컨벤션 통일

* chore: 패키지 수정

* refactor: 가격 예외 범위 수정

* refactor: 주문 상태 변경 응답 Void -> OrderResponse로 변경

* refactor: 주문 테이블 상태 확인 로직 메서드 분리

* refactor: empty 값 request에서 꺼내도록 수정

* refactor: 손님 수 최소값 수정